--- a/task-b/index.html
+++ b/task-b/index.html
@@ -32,7 +32,7 @@
         }
         #map {
             width: 80%;
-            height: 540px;
+            height: 400px;
             margin: 10px auto;
         }
         footer {
@@ -40,23 +40,26 @@
             width: 80%;
         }
         p {
-            font-size: 1em;
-            color: #001323;
+            font-size: 0.9em;
+            color: #a8a8a8;
         }
-        /* Additional style rules go here! */
+        p.author-info {
+            font-style: italic;   
+        }
     </style>
 </head>
 
 <body>
     <header>
-        <h1>Map Title</h1>
-        <h2>Map Subtitle</h2>
+        <h1>Lexington</h1>
+        <h2>Home of the IGUANAS.</h2>
     </header>
 
     <div id='map'></div>
 
     <footer>
-        <p>Map authored by Eric Huntley</p>
+        <p class='author-info'>Map authored by Eric Huntley</p>
+        <p>Like a gourmet at a wine tasting, you sample different varieties of <a target=_blank href="http://noodlytime.com/postimages/need-real-doge.png">boredom</a>.</p>
         <p>Additional information about the data and map goes here.</p>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis urna magna, maximus nec laoreet sit amet, dictum ultricies nibh. Ut id auctor lacus. Nam a dolor et justo luctus luctus. Duis a elit eget risus dictum vehicula id eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sed enim nisl. Vestibulum commodo imperdiet lacus, sed facilisis erat placerat sit amet. Nulla consequat malesuada neque eget aliquet. Integer non convallis nisl, gravida ultrices ex. Fusce nec vestibulum elit. Sed elementum lectus ipsum, vulputate elementum ex laoreet a. Aenean eu ex varius, varius felis vitae, efficitur nulla. Quisque pretium laoreet ante, in sodales dui vehicula at. Mauris eu sem sapien.
             <p>
