--- a/session-05/task-d/index.html
+++ b/session-05/task-d/index.html
@@ -29,11 +29,14 @@
         }
         h2 {
             display: inline-block;
-            color: #001323;
+            color: #7e7e7e;
+        }
+        h3 {
+            color: #7e7e7e;
         }
         #map {
             width: 80%;
-            height: 540px;
+            height: 400px;
             margin: 10px auto;
         }
         footer {
@@ -41,31 +44,35 @@
             width: 80%;
         }
         p {
-            font-size: 1em;
+            font-size: 0.9em;
             color: #001323;
         }
-        /* Additional style rules go here! */
-        
-        .capitol{
-           fill: red;   
+        p.author-info {
+            font-style: italic;
+            text-align: right;
+            font-size: 0.7em;
         }
-
+        a {
+            color: #7e7e7e;
+            font-weight:bold;
+        }
     </style>
 </head>
 
 <body>
     <header>
-        <h1>Map Title</h1>
-        <h2>Map Subtitle</h2>
+        <h1>KenTurkey</h1>
+        <h2>Mapping (Trans)national Subjecturkeyties</h2>
     </header>
 
     <div id='map'></div>
 
     <footer>
-        <p>Map authored by YOUR NAME</p>
-        <p>Additional information about the data and map goes here.</p>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis urna magna, maximus nec laoreet sit amet, dictum ultricies nibh. Ut id auctor lacus. Nam a dolor et justo luctus luctus. Duis a elit eget risus dictum vehicula id eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Sed sed enim nisl. Vestibulum commodo imperdiet lacus, sed facilisis erat placerat sit amet. Nulla consequat malesuada neque eget aliquet. Integer non convallis nisl, gravida ultrices ex. Fusce nec vestibulum elit. Sed elementum lectus ipsum, vulputate elementum ex laoreet a. Aenean eu ex varius, varius felis vitae, efficitur nulla. Quisque pretium laoreet ante, in sodales dui vehicula at. Mauris eu sem sapien.
-        </p>
+        <p class='author-info'>Map authored by Eric Huntley</p>
+        <h3>About This Map</h3>
+        <p>Like a gourmet at a wine tasting, you sample different varieties of boredom.</p>
+        <h3>Data Sources</h3>
+        <p>Source code available at <a target=_blank href="https://github.com/designedspace/geo409">GitHub.</a></p>
     </footer>
 
     <script>
