task-j tidied up and commented.

--- a/task-j/index.html
+++ b/task-j/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset=utf-8 />
-    <title>Task J starter template</title>
+    <title>Vacant Housing in Kentucky</title>
     <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
@@ -72,9 +72,6 @@
             float: left;
             margin-right: 10px;
         }
-        .leaflet-popup-content {
-            max-width: 160px;   
-        }
         
         .info {
             padding: 6px 8px;
@@ -93,8 +90,6 @@
 
 <body>
     <header>
-        <h1>Map Title</h1>
-        <h2>Map Subtitle</h2>
     </header>
     
     <div id='ui-controls'>
